# delphi

./: .gitignore  README.md  analyze_agreement_and_movement.py  analyze_all_experts.py  analyze_all_experts_with_variance.py  analyze_brier_simple.py  analyze_expert_comparison.py  analyze_model_size_effects.py  analyze_prompt_comparison.py  calculate_brier_scores.py  check_sf_public_medians.py  compare_delphi_results.py  compare_initial_vs_round0.py  compare_oss_120b_variants.py  comparison_plotter.py  delphi.py  delphi_runner.py  eval.py  expert.py  get_brier_stats.py  icl_best-worst_ablations.py  icl_delphi_results.py  icl_delphi_tests.py  icl_delphi_tests_no_examples.py  icl_delphi_tests_plot.py  icl_initial_forecasts.py  icl_superagent.py  icl_update_tests_plot.py  initial_icl_tests.ipynb  initial_icl_tests.py  initial_icl_tests_backup.py  inspect_pickle.py  mediator.py  models.py  probability_parser.py  pyproject.toml  requirements.txt  run_experiment.py  run_experts_comparison.py  run_prompt_comparison.py  (+4 more)
agents/: btf_agent.py  btf_expert.py  btf_tools.py  btf_utils.py  expert.py  hybrid_btf_expert.py  icl_delphi_tests.py  mediator.py
analyze/: aggregate_brier_rounds_across_seeds.py  analyze_agreement_and_movement.py  analyze_all_experts.py  analyze_all_experts_with_variance.py  analyze_brier_simple.py  analyze_calibration_sweep.py  analyze_example_influence.py  analyze_forecasters.py  analyze_prompt_evolution.py  analyze_reasoning_effort_sweep.py  analyze_sequential_results.py  analyze_sweep_agreement_and_movement.py  analyze_sweep_by_topic.py  analyze_sweep_by_topic_df.py  analyze_sweep_results.py  analyze_sweep_results_robust.py  calculate_brier_scores.py  compare_aggregate_brier_across_configs.py  count_fcast_generation_success_rate.py  get_brier_stats.py  icl_best-worst_ablations_plot.py  icl_delphi_results.py  icl_delphi_tests_plot.py  user_profiler.py  utils.py
configs/: config.yml  config_claude_opus.yml  config_delphi_1round.yml  config_delphi_2round.yml  config_delphi_2round_haiku.yml  config_delphi_2round_sonnet.yml  config_openai.yml  config_quick_test.yml  delphi_experiment.yml  delphi_groq.yml  delphi_oss_120b.yml  delphi_oss_120b_expert.yml  delphi_test_small.yml  exp_claude37_sonnet.yml  exp_deepseek_r1.yml  exp_gpt_120b.yml  exp_gpt_20b.yml  exp_gpt_4o.yml  exp_gpt_5.yml  exp_llama_maverick.yml  exp_o1.yml  exp_o3.yml  exp_qwen3_32b.yml  experts_comparison_claude37_sonnet.yml  experts_comparison_deepseek_r1.yml  experts_comparison_gpt5.yml  experts_comparison_gpt_4o.yml  experts_comparison_gpt_oss_120b.yml  experts_comparison_gpt_oss_20b.yml  experts_comparison_llama_maverick.yml  experts_comparison_o1.yml  experts_comparison_o3.yml  experts_comparison_qwen3_32b.yml  genetic_evolution_delphi.yml  genetic_evolution_example.yml  genetic_evolution_mediator.yml  genetic_evolution_mediator_smooth.yml  genetic_evolution_mediator_smooth_kimi_k2_full.yml  genetic_evolution_mediator_smooth_kimi_k2_full_frequency.yml  genetic_evolution_mediator_smooth_kimi_k2_full_frequency_smooth_v2.yml  (+24 more)
dataset/: dataloader.py  test.py
genetic_evolution/: __init__.py  fitness_smooth_improvement.py  genetic_prompt_evolution.py  genetic_prompt_optimizer.py  operators.py  prompt_population.py  run_genetic_evolution.py  sequential_prompt_learning.py  test_parallel_mutations.py
profiler/: analyze_forecasters.py  user_profiler.py
prompt_learning/: __init__.py  prompt_learner.py
runners/: delphi_runner.py  exp_runner_simple.py  icl_delphi_tests.py  icl_initial_forecasts.py  overnight_exp_runner.py
scripts/: evo_dashboard.py  evo_dashboard_server.py  exp_runner_simple.py  live_monitor.py  overnight_exp_runner.py  parse_log.py  plot_brier_progress.py  run_genetic_evolution.py  sequential_prompt_learning.py  sort_jsons_by_test_set.py  sweep_launch.py  sweep_resume.py
tests/: test_btf_agent.py
utils/: batch_convert_to_json.py  config_types.py  convert_pickles_to_json.py  llm_config.py  (+12 more)
(+457 files in other folders)
